Fix flow launch gating and step ordering